<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background"
    tools:context=".view.ScoreActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameOverTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/game_over"
        style="@style/ResultText"
        android:textColor="#000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/questions_correctly"
            android:id="@+id/correctlyTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/percentTextView"
            android:text="0%"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:alpha="0"
        android:visibility="invisible"
        android:id="@+id/buttonLayout"
        >
        <Button
            android:text="@string/main_menu"
            android:id="@+id/mainMenuButton"
            style="@style/ButtonMain"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />

        <Button
            android:text="@string/new_game"
            android:id="@+id/newRoundButton"
            style="@style/ButtonMain"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />

    </LinearLayout>




</RelativeLayout>
