<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PlayerNameActivity"
    android:background="@mipmap/background">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:id="@+id/relativeLayout">

        <ImageButton
            android:id="@+id/menuImageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/menu"
            android:scaleType="centerCrop"
            android:background="@null"
            android:tint="@color/colorAccent"
            android:layout_marginLeft = "@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:id="@+id/barTitleTextView"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/menuImageButton"
            android:layout_toEndOf="@+id/menuImageButton"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            />

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_name"
        android:id="@+id/titleTextView"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:id="@+id/nameEditText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/titleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/text"
        android:hint="@string/player_name"
        android:padding="6dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        />

    <Button
        android:id="@+id/startButton"
        android:text="@string/start"
        style="@style/Button"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/nameEditText"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
